# ArgParser

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  accumulate.cpp  custom_arg.cpp  custom_builder.cpp  double_arg.cpp
lib/: ArgParser.cpp  ArgParser.h
lib/argparser/: ArgParser.cpp  ArgParser.hpp  ArgumentData.hpp  BoolArgument.hpp  Builder.hpp  IntArgument.hpp  StringArgument.hpp
tests/: argparser_test.cpp
